# spago.nix

./: .gitattributes  .gitignore  LICENSE  README.org  flake.nix  fourmolu.yaml  generate.sh  overlay.nix
.github/workflows/: build.yml
docs/: README.org  faq.org  how-it-works.org  reference.org
example/: flake.nix
examples/no-additions/: package-lock.json
lib/: project.nix  spago.nix  upstream-hashes.nix  upstreams.nix  utils.nix
package-sets/: psc-0.14.0-20210302.nix  psc-0.14.0-20210304.nix  psc-0.14.0-20210307.nix  psc-0.14.0-20210308.nix  psc-0.14.0-20210309.nix  psc-0.14.0-20210311.nix  psc-0.14.0-20210313.nix  psc-0.14.0-20210315.nix  psc-0.14.0-20210317.nix  psc-0.14.0-20210318.nix  psc-0.14.0-20210324.nix  psc-0.14.0-20210329.nix  psc-0.14.0-20210331.nix  psc-0.14.0-20210401.nix  psc-0.14.0-20210402.nix  psc-0.14.0-20210405.nix  psc-0.14.0-20210406.nix  psc-0.14.0-20210409.nix  psc-0.14.0.nix  psc-0.14.1-20210419.nix  psc-0.14.1-20210427.nix  psc-0.14.1-20210429.nix  psc-0.14.1-20210506.nix  psc-0.14.1-20210516.nix  psc-0.14.1-20210613.nix  psc-0.14.2-20210613.nix  psc-0.14.2-20210622.nix  psc-0.14.2-20210623.nix  psc-0.14.2-20210629.nix  psc-0.14.2-20210713.nix  psc-0.14.3-20210716.nix  psc-0.14.3-20210722.nix  psc-0.14.3-20210808.nix  psc-0.14.3-20210811.nix  psc-0.14.3-20210823.nix  psc-0.14.4-20210905.nix  psc-0.14.4-20210919.nix  psc-0.14.4-20211026.nix  psc-0.14.4-20211028.nix  psc-0.14.4-20211030.nix  (+59 more)
pure-spago-nix/: fourmolu.yaml  pure-spago-nix.cabal
pure-spago-nix/exe/: Dependencies.hs  Main.hs  Types.hs  Upstreams.hs
test/: project.nix
(+297 files in other folders)
